--- a/Src/WebApiServer/WebApi/appsettings.json
+++ b/Src/WebApiServer/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=VisualMoney;TrustServerCertificate=True;MultipleActiveResultSets=true;User Id=sa;Password=test;"
+  }
 }
