Corrected models for the user on db, addedd password salt, created stored procedures and functions on c# for the creation of the user using BCrypt. Validation of the userRegistration for email and password, added Automapper for Dtos Working fine

--- a/Src/WebApiServer/WebApi/appsettings.json
+++ b/Src/WebApiServer/WebApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=VisualMoney;TrustServerCertificate=True;MultipleActiveResultSets=true;User Id=sa;Password=test;"
+  },
+  "JwtConfiguration": {
+    "Key": "DhftOSwe5uphK3vmCJretyQrexST1RseryjZBjXWRgJMFPU4",
+    "Issuer": "https://localhost:44381/",
+    "Audience": "https://localhost:44381/"
   }
 }
