Added Authorization on clientside, tested with some test views, need to implement guard for the access to pages

--- a/Src/WebClientApp/WebClient/.vscode/launch.json
+++ b/Src/WebClientApp/WebClient/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "type": "msedge",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:8080",
+      "url": "https://localhost:8443",
       "webRoot": "${workspaceFolder}"
     }
 
