Added link in signup and login page to pass from one to other, also added link style and default font-family

--- a/Src/WebClientApp/WebClient/package.json
+++ b/Src/WebClientApp/WebClient/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 8443 --host 0.0.0.0 --ssl",
+    "start": "ng serve --port 8443 --ssl",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
